--- a/test.html
+++ b/test.html
@@ -1,3 +1,457 @@
-<h1>Big Heading</h1>
-<p>paragraph</p>
-so whats's next so i just updated on github desktop
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Youtube</title>
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="general.css" />
+    <link rel="stylesheet" href="sidebar.css" />
+    <link rel="stylesheet" href="video.css" />
+  </head>
+  <body>
+    <!--     Header File        --------------------------------------------------------------------->
+    <!--     Header File      ----------------------------------------------------------------------->
+
+    <header class="header">
+      <!--       Header File         --------------------------------------------------------------->
+      <!--       Left-section        --------------------------------------------------------------->
+      <div class="left-section">
+        <img
+          class="hamburger-icon"
+          src="Images/Icons/hamburger-menu.svg"
+          alt=""
+        />
+        <img class="youtube-icon" src="Images/Icons/youtube-logo.svg" alt="" />
+      </div>
+      <!--       Header File        ----------------------------------------------------------------->
+      <!--       Middle-section        --------------------------------------------------------------->
+      <div class="middle-section">
+        <input class="search-box" type="text" placeholder="Search" />
+        <button class="search-icon-button">
+          <img class="search-icon" src="Images/Icons/search.svg" alt="" />
+          <div class="tooltip">Search</div>
+        </button>
+        <button class="voice-search-icon-button">
+          <img
+            class="voice-search-icon"
+            src="Images/Icons/voice-search-icon.svg"
+            alt=""
+          />
+          <div class="tooltip">Search with voice</div>
+        </button>
+      </div>
+      <!--       Header File        ------------------------------------------------------------------->
+      <!--       Right-section        ---------------------------------------------------------------->
+      <div class="right-section">
+        <div class="upload-icon-container">
+          <img class="upload-icon" src="Images/Icons/upload.svg" alt="" />
+          <div class="tooltip">Upload</div>
+        </div>
+        <div class="youtube-apps-icon-container">
+          <img
+            class="youtube-apps-icon"
+            src="Images/Icons/youtube-apps.svg"
+            alt=""
+          />
+          <div class="tooltip">Youtube Apps</div>
+        </div>
+        <div class="notifications-container">
+          <img
+            class="notifications-icon"
+            src="Images/Icons/notifications.svg"
+            alt=""
+          />
+          <div class="notifications-counter">3</div>
+          <div class="tooltip">Notifications</div>
+        </div>
+        <img class="user-icon" src="Images/Icons/user.jpg" alt="" />
+      </div>
+    </header>
+
+    <!--     Sidebar        ------------------------------------------------------------------------------>
+    <!--     Sidebar        ------------------------------------------------------------------------------>
+
+    <nav class="sidebar">
+      <div class="sidebar-box">
+        <img class="sidebar-icon" src="Images/Icons/home.svg" alt="" />
+        <p>Home</p>
+      </div>
+      <div class="sidebar-box">
+        <img class="sidebar-icon" src="Images/Icons/explore.svg" alt="" />
+        <p>Explore</p>
+      </div>
+      <div class="sidebar-box">
+        <img class="sidebar-icon" src="Images/Icons/subscriptions.svg" alt="" />
+        <p>Subscriptions</p>
+      </div>
+      <div class="sidebar-box">
+        <img class="sidebar-icon" src="Images/Icons/originals.svg" alt="" />
+        <p>Originals</p>
+      </div>
+      <div class="sidebar-box">
+        <img class="sidebar-icon" src="Images/Icons/youtube-music.svg" alt="" />
+        <p>YouTube Music</p>
+      </div>
+      <div class="sidebar-box">
+        <img class="sidebar-icon" src="Images/Icons/library.svg" alt="" />
+        <p>Library</p>
+      </div>
+    </nav>
+
+    <!-- Main Body ----------------------------------------------------------------------------------->
+    <!-- Video Part ------------------------------------------------------------------------------------->
+    <main>
+      <!-- Video Part ------------------------------------------------------------------------------------->
+      <!-- Section 1 ------------------------------------------------------------------------------------->
+      <section>
+        <div class="thumbnail-container">
+          <a
+            href="https://www.youtube.com/watch?v=n2RNcPRtAiY&ab_channel=MarquesBrownlee"
+          >
+            <img
+              class="thumbnail"
+              src="Images/Thumbnails/thumbnail-1.jpg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="video-info">
+          <div class="channel-container">
+            <a href="https://www.youtube.com/c/mkbhd"
+              ><img src="Images/Channel/channel-1.jpeg" alt=""
+            /></a>
+            <div class="tooltip">
+              <div>
+                <img src="Images/Channel/channel-1.jpeg" alt="" />
+              </div>
+              <div>
+                <p class="tooltip-title">Marques Brownlee</p>
+                <p class="tooltip-info">15M subscribers</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <a
+              href="https://www.youtube.com/watch?v=n2RNcPRtAiY&ab_channel=MarquesBrownlee"
+            >
+              <p class="video-title">
+                Talking Tech and AI with Google CEO Sundar Pichai!
+              </p>
+            </a>
+            <a href="https://www.youtube.com/c/mkbhd">
+              <p class="channel-title">Marques Brownlee</p>
+            </a>
+            <p class="video-stat">3.4M views &#183; 6 months ago</p>
+          </div>
+        </div>
+      </section>
+      <!-- Video Part ------------------------------------------------------------------------------------->
+      <!-- Section 2 ------------------------------------------------------------------------------------->
+      <section>
+        <div class="thumbnail-container">
+          <a
+            href="https://www.youtube.com/watch?v=mP0RAo9SKZk&ab_channel=Markiplier"
+          >
+            <img
+              class="thumbnail"
+              src="Images/Thumbnails/thumbnail-2.jpg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="video-info">
+          <div class="channel-container">
+            <a href="https://www.youtube.com/c/markiplier"
+              ><img src="Images/Channel/channel-2.jpeg" alt=""
+            /></a>
+            <div class="tooltip">
+              <div>
+                <img src="Images/Channel/channel-2.jpeg" alt="" />
+              </div>
+              <div>
+                <p class="tooltip-title">Markplier</p>
+                <p class="tooltip-info">33M subscribers</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <a
+              href="https://www.youtube.com/watch?v=mP0RAo9SKZk&ab_channel=Markiplier"
+            >
+              <p class="video-title">Try Not To Laugh Challenge #9</p>
+            </a>
+            <a href="https://www.youtube.com/c/markiplier">
+              <p class="channel-title">Markplier</p>
+            </a>
+            <p class="video-stat">19M views &#183; 4 years ago</p>
+          </div>
+        </div>
+      </section>
+      <!-- Video Part ------------------------------------------------------------------------------------->
+      <!-- Section 3 ------------------------------------------------------------------------------------->
+      <section>
+        <div class="thumbnail-container">
+          <a
+            href="https://www.youtube.com/watch?v=FgjPQQeTh1w&ab_channel=SSSniperWolf"
+          >
+            <img
+              class="thumbnail"
+              src="Images/Thumbnails/thumbnail-3.jpg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="video-info">
+          <div class="channel-container">
+            <a href="https://www.youtube.com/user/SSSniperWolf"
+              ><img src="Images/Channel/channel-3.jpeg" alt=""
+            /></a>
+            <div class="tooltip">
+              <div>
+                <img src="Images/Channel/channel-3.jpeg" alt="" />
+              </div>
+              <div>
+                <p class="tooltip-title">SSSniperWolf</p>
+                <p class="tooltip-info">32M subscribers</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <a
+              href="https://www.youtube.com/watch?v=FgjPQQeTh1w&ab_channel=SSSniperWolf"
+            >
+              <p class="video-title">
+                Crazy Tik Toks Taken Moments Before DISASTER
+              </p>
+            </a>
+            <a href="https://www.youtube.com/user/SSSniperWolf">
+              <p class="channel-title">SSSniperWolf</p>
+            </a>
+            <p class="video-stat">12M views &#183; 1 years ago</p>
+          </div>
+        </div>
+      </section>
+      <!-- Video Part ------------------------------------------------------------------------------------->
+      <!-- Section 4 ------------------------------------------------------------------------------------->
+      <section>
+        <div class="thumbnail-container">
+          <a
+            href="https://www.youtube.com/watch?v=094y1Z2wpJg&ab_channel=Veritasium"
+          >
+            <img
+              class="thumbnail"
+              src="Images/Thumbnails/thumbnail-4.jpg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="video-info">
+          <div class="channel-container">
+            <a href="https://www.youtube.com/c/veritasium"
+              ><img src="Images/Channel/channel-4.jpeg" alt=""
+            /></a>
+            <div class="tooltip">
+              <div>
+                <img src="Images/Channel/channel-4.jpeg" alt="" />
+              </div>
+              <div>
+                <p class="tooltip-title">Veritasium</p>
+                <p class="tooltip-info">12M subscribers</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <a
+              href="https://www.youtube.com/watch?v=094y1Z2wpJg&ab_channel=Veritasium"
+            >
+              <p class="video-title">
+                The Simplest Math Problem No One Can Solve - Collatz Conjecture
+              </p>
+            </a>
+            <a href="https://www.youtube.com/c/veritasium">
+              <p class="channel-title">Veritasium</p>
+            </a>
+            <p class="video-stat">18M views &#183; 4 months ago</p>
+          </div>
+        </div>
+      </section>
+      <!-- Video Part ------------------------------------------------------------------------------------->
+      <!-- Section 5 ------------------------------------------------------------------------------------->
+      <section>
+        <div class="thumbnail-container">
+          <a
+            href="https://www.youtube.com/watch?v=86CQq3pKSUw&ab_channel=CSDojo"
+          >
+            <img
+              class="thumbnail"
+              src="Images/Thumbnails/thumbnail-5.jpg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="video-info">
+          <div class="channel-container">
+            <a href="https://www.youtube.com/c/CSDojo"
+              ><img src="Images/Channel/channel-5.jpeg" alt=""
+            /></a>
+            <div class="tooltip">
+              <div>
+                <img src="Images/Channel/channel-5.jpeg" alt="" />
+              </div>
+              <div>
+                <p class="tooltip-title">CS Dojo</p>
+
+                <p class="tooltip-info">1.8M subscribers</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <a
+              href="https://www.youtube.com/watch?v=86CQq3pKSUw&ab_channel=CSDojo"
+            >
+              <p class="video-title">
+                Kadane's Algorithm to Maximum Sum Subarray Problem
+              </p>
+            </a>
+            <a href="https://www.youtube.com/c/CSDojo">
+              <p class="channel-title">CS Dojo</p>
+            </a>
+            <p class="video-stat">519K views &#183; 5 years ago</p>
+          </div>
+        </div>
+      </section>
+      <!-- Video Part ------------------------------------------------------------------------------------->
+      <!-- Section 6 ------------------------------------------------------------------------------------->
+      <section>
+        <div class="thumbnail-container">
+          <a
+            href="https://www.youtube.com/watch?v=yXWw0_UfSFg&ab_channel=MrBeast"
+          >
+            <img
+              class="thumbnail"
+              src="Images/Thumbnails/thumbnail-6.jpg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="video-info">
+          <div class="channel-container">
+            <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA"
+              ><img src="Images/Channel/channel-6.jpeg" alt=""
+            /></a>
+            <div class="tooltip">
+              <div>
+                <img src="Images/Channel/channel-6.jpeg" alt="" />
+              </div>
+              <div>
+                <p class="tooltip-title">MrBeast</p>
+                <p class="tooltip-info">97M subscribers</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <a
+              href="https://www.youtube.com/watch?v=yXWw0_UfSFg&ab_channel=MrBeast"
+            >
+              <p class="video-title">
+                Anything You Can Fit In The Circle I’ll Pay For
+              </p>
+            </a>
+            <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+              <p class="channel-title">MrBeast</p>
+            </a>
+            <p class="video-stat">141M views &#183; 1 year ago</p>
+          </div>
+        </div>
+      </section>
+      <!-- Video Part ------------------------------------------------------------------------------------->
+      <!-- Section 7 ------------------------------------------------------------------------------------->
+      <section>
+        <div class="thumbnail-container">
+          <a
+            href="https://www.youtube.com/watch?v=fNVa1qMbF9Y&ab_channel=RealLifeLore"
+          >
+            <img
+              class="thumbnail"
+              src="Images/Thumbnails/thumbnail-7.jpg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="video-info">
+          <div class="channel-container">
+            <a href="https://www.youtube.com/channel/UCP5tjEmvPItGyLhmjdwP7Ww"
+              ><img src="Images/Channel/channel-7.jpeg" alt=""
+            /></a>
+            <div class="tooltip">
+              <div>
+                <img src="Images/Channel/channel-7.jpeg" alt="" />
+              </div>
+              <div>
+                <p class="tooltip-title">RealLifeLore</p>
+                <p class="tooltip-info">6M subscribers</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <a
+              href="https://www.youtube.com/watch?v=fNVa1qMbF9Y&ab_channel=RealLifeLore"
+            >
+              <p class="video-title">Why Planes Don't Fly Over Tibet</p>
+            </a>
+            <a href="https://www.youtube.com/channel/UCP5tjEmvPItGyLhmjdwP7Ww">
+              <p class="channel-title">RealLifeLore</p>
+            </a>
+            <p class="video-stat">6.6M views &#183; 1 year ago</p>
+          </div>
+        </div>
+      </section>
+      <!-- Video Part ------------------------------------------------------------------------------------->
+      <!-- Section 8 ------------------------------------------------------------------------------------->
+      <section>
+        <div class="thumbnail-container">
+          <a
+            href="https://www.youtube.com/watch?v=lFm4EM1juls&ab_channel=TechVision"
+          >
+            <img
+              class="thumbnail"
+              src="Images/Thumbnails/thumbnail-8.jpg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="video-info">
+          <div class="channel-container">
+            <a href="https://www.youtube.com/channel/UCHAK6CyegY22Zj2GWrcaIxg"
+              ><img src="Images/Channel/channel-8.jpeg" alt=""
+            /></a>
+            <div class="tooltip">
+              <div>
+                <img src="Images/Channel/channel-8.jpeg" alt="" />
+              </div>
+              <div>
+                <p class="tooltip-title">Tech Vision</p>
+                <p class="tooltip-info">758K subscribers</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <a
+              href="https://www.youtube.com/watch?v=lFm4EM1juls&ab_channel=TechVision"
+            >
+              <p class="video-title">
+                Inside The World's Biggest Passenger Plane
+              </p>
+            </a>
+            <a href="https://www.youtube.com/channel/UCHAK6CyegY22Zj2GWrcaIxg">
+              <p class="channel-title">Tech Vision</p>
+            </a>
+            <p class="video-stat">3.7M views &#183; 1 year ago</p>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
+</html>
